[workspace]
# In alphabetical order
members = [
    "influxdb3",
    "influxdb3_server",
    "influxdb3_write",
]
default-members = ["influxdb3"]

resolver = "2"

exclude = [
    "*.md",
    "*.txt",
    ".circleci/",
    ".editorconfig",
    ".git*",
    ".github/",
    ".kodiak.toml",
    "LICENSE*",
]

[workspace.package]
version = "0.1.0"
authors = ["influxdata Edge Developers"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arrow = { version = "49.0.0", features = ["prettyprint", "chrono-tz"] }
arrow-buffer = { version = "49.0.0" }
arrow-flight = { version = "49.0.0", features = ["flight-sql-experimental"] }
datafusion = "49.0.0"
datafusion-proto = "49.0.0"
hashbrown = { version = "0.14.3" }
object_store = { version = "0.8.0" }
parquet = { version = "49.0.0", features = ["object_store"] }
pbjson = { version = "0.6.0" }
pbjson-build = { version = "0.6.2" }
pbjson-types = { version = "0.6.0" }
prost = { version = "0.12.3" }
prost-build = { version = "0.12.2" }
prost-types = { version = "0.12.3" }
sqlparser = { version = "0.41.0" }
tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }
tonic-build = { version = "0.10.2" }
tonic-health = { version = "0.10.2" }
tonic-reflection = { version = "0.10.2" }

# core.git crates we depend on
authz = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb", features = ["http"] }
clap_blocks = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
data_types = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
datafusion_util = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
influxdb-line-protocol = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
iox_catalog = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
iox_query = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
iox_time = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
ioxd_common = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
metric = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
metric_exporters = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
observability_deps = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
panic_logging = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
parquet_file = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
schema = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
service_common = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
service_grpc_flight = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
test_helpers = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev ="675113bd298c777ec7c45bdbbf89bd6413da6feb", features = ["future_timeout"] }
test_helpers_end_to_end = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
tokio_metrics_bridge = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
trace = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
trace_exporters = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
trace_http = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
tracker = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb" }
trogging = { git = "ssh://git@github.com/influxdata/influxdb3-core.git", rev = "675113bd298c777ec7c45bdbbf89bd6413da6feb", default-features = true, features = ["clap"] }

[workspace.lints.rust]
rust_2018_idioms = "deny"
unreachable_pub = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
clone_on_ref_ptr = "deny"
future_not_send = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"

# This profile optimizes for runtime performance and small binary size at the expense of longer
# build times. It's most suitable for final release builds.
[profile.release]
codegen-units = 16
debug = true
lto = "thin"

[profile.bench]
debug = true

# This profile optimizes for short build times at the expense of larger binary size and slower
# runtime performance. It's most suitable for development iterations.
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

# Per insta docs: https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
