[package]
name = "influxdb3_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authz = { path = "../../influxdb-core/authz", features = ["http"] }
bytes = "1.5"
datafusion_util = { path = "../../influxdb-core/datafusion_util" }
data_types = { path = "../../influxdb-core/data_types" }
iox_catalog = { path = "../../influxdb-core/iox_catalog" }
iox_query = { path = "../../influxdb-core/iox_query" }
iox_time = { path = "../../influxdb-core/iox_time" }
influxdb-line-protocol = { path = "../../influxdb-core/influxdb_line_protocol" }
influxdb3_write = { path = "../influxdb3_write" }
object_store = { workspace = true }
observability_deps = { path = "../../influxdb-core/observability_deps" }
metric = { path = "../../influxdb-core/metric" }
metric_exporters = { path = "../../influxdb-core/metric_exporters" }
schema = { path = "../../influxdb-core/schema" }
service_common = { path = "../../influxdb-core/service_common" }
service_grpc_flight = { path = "../../influxdb-core/service_grpc_flight" }
trace = { path = "../../influxdb-core/trace/" }
trace_exporters = { path = "../../influxdb-core/trace_exporters" }
trace_http = { path = "../../influxdb-core/trace_http" }
tracker = { path = "../../influxdb-core/tracker" }

arrow = { workspace = true, features = ["prettyprint"] }
chrono = "0.4"
datafusion = { workspace = true }
async-trait = "0.1"
futures = "0.3.28"
hyper = "0.14"
parking_lot = "0.11.1"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7.9" }
tonic = { workspace = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_urlencoded = "0.7.0"
tower = "0.4.13"
flate2 = "1.0.27"
arrow-json = "49.0.0"
arrow-schema = "49.0.0"

[dev-dependencies]
parquet_file = { path = "../../influxdb-core/parquet_file" }
test_helpers = { path = "../../influxdb-core/test_helpers", features = ["future_timeout"] }
test_helpers_end_to_end = { path = "../../influxdb-core/test_helpers_end_to_end" }
http = "0.2.9"
hyper = "0.14"
urlencoding = "1.1"
