[package]
name = "influxdb3_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb3_write = { path = "../influxdb3_write" }

# Core Crates
authz.workspace = true
datafusion_util.workspace = true
data_types.workspace = true
iox_catalog.workspace = true
iox_query.workspace = true
iox_time.workspace = true
influxdb-line-protocol.workspace = true
observability_deps.workspace = true
metric.workspace = true
metric_exporters.workspace = true
schema.workspace = true
service_common.workspace = true
service_grpc_flight.workspace = true
trace.workspace = true
trace_exporters.workspace = true
trace_http.workspace = true
tracker.workspace = true

# crates.io Dependencies
arrow = { workspace = true, features = ["prettyprint"] }
arrow-json = "49.0.0"
arrow-schema = "49.0.0"
async-trait = "0.1"
bytes = "1.5"
chrono = "0.4"
datafusion = { workspace = true }
flate2 = "1.0.27"
futures = "0.3.28"
hyper = "0.14"
object_store = { workspace = true }
parking_lot = "0.11.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_urlencoded = "0.7.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7.9" }
tonic = { workspace = true }
tower = "0.4.13"

[dev-dependencies]
# Core Crates
parquet_file.workspace = true
test_helpers.workspace = true
test_helpers_end_to_end.workspace = true

# crates.io crates
http = "0.2.9"
hyper = "0.14"
urlencoding = "1.1"
