[package]
name = "influxdb3_write"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
data_types = { path = "../../influxdb-core/data_types" }
influxdb-line-protocol = { path = "../../influxdb-core/influxdb_line_protocol" }
iox_catalog = { path = "../../influxdb-core/iox_catalog" }
iox_query = { path = "../../influxdb-core/iox_query" }
object_store.workspace = true
observability_deps = { path = "../../influxdb-core/observability_deps" }
schema = { path = "../../influxdb-core/schema" }


arrow = { workspace = true }
async-trait = "0.1"
byteorder = "1.3.4"
chrono = "0.4"
crc32fast = "1.2.0"
datafusion = { workspace = true }
parking_lot = "0.11.1"
parquet = { workspace = true }
thiserror = "1.0"
tokio = { version = "1.35", features = ["macros", "fs", "io-util", "parking_lot", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
snap = "1.0.0"
bytes = "1.5.0"
futures-util = "0.3.30"

[dev-dependencies]
test_helpers = { path = "../../influxdb-core/test_helpers" }

