[package]
name = "influxdb3_write"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

# Core Crates
data_types.workspace = true
influxdb-line-protocol.workspace = true
iox_catalog.workspace = true
iox_query.workspace = true
observability_deps.workspace = true
schema.workspace = true

# crates.io crates
arrow = { workspace = true }
async-trait = "0.1"
byteorder = "1.3.4"
chrono = "0.4"
crc32fast = "1.2.0"
datafusion = { workspace = true }
object_store.workspace = true
parking_lot = "0.11.1"
parquet = { workspace = true }
thiserror = "1.0"
tokio = { version = "1.35", features = ["macros", "fs", "io-util", "parking_lot", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
snap = "1.0.0"
bytes = "1.5.0"
futures-util = "0.3.30"

[dev-dependencies]
# Core Crates
test_helpers.workspace = true
